[metadata]
name = golfer
version = attr: golfer.__version__.__version__
description = Tool to shorten Python code
long_description = file: README.md
long_description_content_type = text/markdown
author = nahco314
author_email = nahco3_ta@yahoo.co.jp
license = MIT

[options]
python_requires = >=3.10
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    golfer = golfer.main:main
